style: increase z-index for active-chats-container to avoid potential overlapping

--- a/src/screens/HomeScreen.module.css
+++ b/src/screens/HomeScreen.module.css
@@ -17,6 +17,7 @@
   overflow: visible;
   justify-content: right;
   pointer-events: visible;
+  z-index: 5;
 }
 
 .active-chats-bottom {
